--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
                 <p>Graduating in Systems Analysis and Development<br>passionate about WEB development.</p>
                 <button>Explore more</button>
             </div>
-            <div class="image">
-                <img src="img/avelar.jpg" alt="Avelar Sousa">
-                <div class="border"></div>
+            <div class="image"></div>
+        </div>
+    </section>
+
+    <section>
+        <div class="about">
+            <div class="resum">
+                <h1>About me</h1>
+                
             </div>
         </div>
     </section>
